tcsoundboard/css/style.css
body {
  font-family: Futura, "Century Gothic", sans-serif;
  font-weight: bold;
  font-size: 1.8vw;
  background-color: white;
  /* set padding and margin to 0 to remove default margins   */
  padding: 0; 
  margin: 0; 
}

.borderdiv {
  border-left-style: solid;
  border-width: 30px;
  border-color: orange;
}

.logodiv {
  text-align: center;
  margin: auto;
}

.logoimg {
  width: 100%;
  height: auto;
  max-width: 65vw;
  padding: 20px;
  padding-bottom: 40px;
}

p {
  text-align: center;
}

.footerdiv {
  padding-top: 75px;
  font-weight: normal;
  width: 80vw;
  margin: auto;
  text-align: center;
  font-size: 1.25vw;
}

a {
  color: white;
}

.appContainer {
  margin: auto;
  width: 80vw;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-auto-rows: 16vw; /* this has to be appContainer width / 5 */
  grid-gap: 1vw;
}

.sound-card {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-color: #FFFFFF;
  color: #5BAF59;
  border-style: solid;
  border-width: 5px;
  border-color: #5BAF59;
  cursor: pointer;
  padding: 5px;
}


@media only screen and (max-width: 768px) {

  html {
    border-width: 12px;
    height: 100%;
  }
  
  .appContainer {
	width: 80vw;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-auto-rows: 26vw;  /* this has to be appContainer width / 3 */
	grid-gap: 15px;
  }
  
  .logoimg {
    width: 100%;
    height: auto;
    max-width: 75vw;
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 20px;
  }
  
  .sound-card {
	border-width: 3px;
	padding: 3px;
	cursor: pointer;
  }
  
  body {
  	font-size: 2.65vw;
  }
  
  .footerdiv {
  	 font-size: 1.75vw;
  }

}

